# ls-process-arguments

./: README.md  prepend-to-all-source-files-that-do-not-already-have-a-license.sh
inc/: process-arguments.hpp
test/: CMakeLists.txt  process-arguments-test.cpp  test-macros.hpp
